--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@types/leaflet-rotate": "^0.2.0",
     "leaflet": "^1.9.4",
+    "leaflet-rotate": "^0.2.8",
     "pinia": "^3.0.4",
     "sharp": "^0.34.5",
     "vue": "^3.5.25"
